add route + controller
