# API/swagger.yaml
@@ -12,7 +12,7 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-  - url: https://localhost/api/v1
+  - url: http://localhost:9090/v1/api
 tags:
   - name: account
   - name: user
@@ -117,6 +117,7 @@ paths:
               properties:
                 email:
                   type: string
+                  format: email
                   example: 'bongmaxuyentuong1@gmail.com'
                 password:
                   type: string
@@ -146,11 +147,8 @@ paths:
                   summary: Successful
                   value:
                     Code: 200
-                    Data:
-                      access_token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY1NTVkMjNkYmJiYTlhMDAwOGE4MTIzMCIsImlhdCI6MTcxMzAwMjkyMCwiZXhwIjoxNzEzODY2OTIwfQ.DV7wFnZrk6qTYXLw4rAosU9CmwVlWzb17aL86R-RYhg
-                      refresh_token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY1NTVkMjNkYmJiYTlhMDAwOGE4MTIzMCIsImlhdCI6MTcxMzAwMjkyMCwiZXhwIjoxNzEzODY2OTIwfQ.DV7wFnZrk6qTYXLw4rAosU9CmwVlWzb17aL86R-RYhg
-                      timeout: 18000
-                    Message: ""
+                    Data: {}
+                    Message: "OK"
                     DataErrors: {}
                 Bad request:
                   $ref: '#/components/examples/bad_request'
@@ -166,7 +164,7 @@ paths:
     post:
       tags:
         - user
-      summary: User Login
+      summary: Create User
       description: ''
       operationId: ''
       requestBody:
@@ -174,7 +172,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/account'
+              $ref: '#/components/schemas/user'
       responses:
         '200':
           description: Successful
@@ -198,14 +196,71 @@ paths:
                       timeout: 
                         type: string
                         example: 18000
+  /proof:
+    post:
+      tags:
+        - proof
+      summary: ''
+      description: ''
+      operationId: ''
+      requestBody:
+        description: ''
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                image:
+                  type: string
+                  format: binary
+      responses:
+        '200':
+          description: Successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  Code:
+                    type: integer
+                    example: 200
+                  Data:
+                    type: object
+                    properties:
+                      image:
+                        type: string
+                        example :  https://res.cloudinary.com/dcyg1qwdc/image/upload/v1711419867/cld-sample-2.jpg
 components:
   schemas:
+    role:
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
     account:
+      type: object
+      properties:
+        id:
+          type: integer
+        email:
+          type: string
+        password:
+          type: string
+        role_id:
+          type: integer
+    user:
       type: object
       properties:
         email:
           type: string
         password:
+          type: string
+    proof:
+      type: object
+      properties:
+        image:
           type: string
   examples:
     'bad_request':
